sort.basic.comb.AlgCombSort.scala.error
Compilation error:
AlgCombSort:5: error: not found: value t
  while (t==0 && ecart>1) {
         ^