sort.basic.comb.AlgCombSort.scala.code
def combSort() {
  var ecart:Int=getNombreValeurs()
  var x:Int=getNombreValeurs()
  while (t==0 && ecart>1) {
  if (ecart>1) {
    ecart=(ecart.toDouble/1.3).toInt
  }
  var i=0
  while (i+ecart < x) {
    if (plusPetit(i,i+ecart)==false) {
      echange(i,i+ecart)
      i=i+1
    }
  }
  }
}

      